# bpod

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  reference_index.html  release_notes.html  release_notes.md  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  reference_index.doctree  release_notes.doctree
.github/workflows/: black.yaml  documentation.yaml  flake8.yaml  main.yaml
_sources/: index.rst.txt  release_notes.md.txt
docs/source/: conf.py  reference_index.rst
src/: bpod.py  serial_singleton.py
src/gui/: main.ui  test.py  testapp.py  widget_port.py
src/modules/: frame2ttl.py
src/tools/: firmware.py
tests/: test_actual_serial.py  test_bpod.py  test_mock.py  test_mock_serial.py  test_serial.py
