[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "bpod"
description = "python module for interfacing with a Bpod finite state machine"
authors = [
    {name = "Florian Rau", email = "florian.rau@internationalbrainlab.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 2 - Pre-Alpha",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "pyserial",
    "pygithub",
    "setuptools_scm"
]

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[project.urls]
"Homepage" = "https://github.com/int-brain-lab/bpod"
"Documentation" = "https://int-brain-lab.github.io/bpod/"
"Bug Tracker" = "https://github.com/int-brain-lab/bpod/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
files = "./src/*.py"
python_version = "3.10"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
